--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,15 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+apply from: 'config/buildsystem/dependencies.gradle'
 
 buildscript {
-    
+    ext.kotlin_version = '1.1.60'
     repositories {
         google()
         jcenter()
+        maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.1'
-        
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
@@ -24,4 +22,35 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+def getSignFile(String file) {
+    Properties properties = readFile(file)
+    return properties.getProperty("KEYSTORE_FILE")
+}
+
+def getSignFilePassword(String file) {
+    Properties properties = readFile(file)
+    return properties.getProperty("KEYSTORE_PASSWORD")
+}
+
+def getSignAlias(String file) {
+    Properties properties = readFile(file)
+    return properties.getProperty("KEY_ALIAS")
+}
+
+def getSignAliasPassword(String file) {
+    Properties properties = readFile(file)
+    return properties.getProperty("KEY_PASSWORD")
+}
+
+def getVersionName(String file) {
+    Properties properties = readFile(file)
+    return properties.getProperty("T21_APP_VERSION")
+}
+
+def readFile(String file) {
+    Properties properties = new Properties()
+    properties.load(project.rootProject.file(file).newDataInputStream())
+    return properties
 }
