--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -1,7 +1,16 @@
 apply plugin: 'java-library'
+apply plugin: 'kotlin'
 
 dependencies {
+    def domainDependencies = rootProject.ext.domainDependencies
+    def domainTestDependencies = rootProject.ext.domainTestDependencies
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+
+    implementation domainDependencies.rxJava
+
+    testImplementation domainTestDependencies.jUnit
 }
 
 sourceCompatibility = "1.7"
