--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,12 +23,14 @@
 
         <activity
             android:name=".view.activity.FilmsActivity"
+            android:parentActivityName=".view.activity.MainActivity"
             android:screenOrientation="portrait">
 
         </activity>
 
         <activity
             android:name=".view.activity.FilmInfoActivity"
+            android:parentActivityName=".view.activity.FilmsActivity"
             android:screenOrientation="portrait">
 
         </activity>
